dev/tests/cases/pos/21_vow_halt.tv
df main() -> void {
    vow(1 + 1 == 2, "math broke");
    echo!("invariant held");
}
