dev/tests/cases/neg/19_unterminated_block_comment.tv
df main() -> void {
    #- never closed
    echo!("x");
}
